--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,15 +7,14 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        target-runtime: [win-x64]
         configuration: [Debug, Release]
 
-    name: Z64Utils-${{ matrix.target-runtime }}-${{ matrix.configuration }}
+    name: Z64Utils-${{ matrix.configuration }}
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
-      restore_args: --runtime ${{ matrix.target-runtime }}
+      restore_args: ''
       build_args: --no-self-contained --configuration ${{ matrix.configuration }} --version-suffix ${{ github.sha }}
-      archive_name: Z64Utils-${{ matrix.target-runtime }}-${{ matrix.configuration }}-${{ github.sha }}
+      archive_name: Z64Utils-${{ matrix.configuration }}-${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -41,10 +40,17 @@ jobs:
         run: |
           dotnet publish --output publish_out/ ${{ env.restore_args }} ${{ env.build_args }}
 
+      - uses: actions/checkout@v4
+        with:
+          repository: Random06457/Z64Utils-Config
+          ref: 8b2a3652b426e6d1cc9058f421c7ba9023cc2bef
+          path: Z64Utils-Config
+          fetch-depth: 0
+
       - name: Copy versions data
         shell: bash
         run: |
-          cp -r -t publish_out/ Z64Utils-Config-master/versions
+          cp -r -t publish_out/ Z64Utils-Config/versions
 
       # Archive
       - name: Create archive
