--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
+          repository: zeldaret/Z64Utils
           ref: config
           path: Z64Utils-Config
           fetch-depth: 0
