--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       restore_args: ''
-      build_args: --no-self-contained --configuration ${{ matrix.configuration }} --version-suffix ${{ github.sha }}
+      build_args: --no-self-contained --configuration ${{ matrix.configuration }} --version-suffix ${{ github.sha }} --property:IncludeSourceRevisionInInformationalVersion=false
       archive_name: Z64Utils-${{ matrix.configuration }}-${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
