--- a/Z64Utils/Z64Utils.csproj
+++ b/Z64Utils/Z64Utils.csproj
@@ -26,11 +26,20 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Be.Windows.Forms.HexBox" Version="1.6.1" />
+    <PackageReference Include="NLog" Version="5.5.0" />
     <PackageReference Include="OpenTK" Version="4.9.3" />
     <PackageReference Include="OpenTK.GLControl" Version="4.0.2" />
     <PackageReference Include="Syroot.BinaryData" Version="5.2.2" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
+
+  <Target Name="CopyNLogConfigToBuildOutput" AfterTargets="Build">
+    <Copy SourceFiles="NLog-$(Configuration).config" DestinationFiles="$(OutDir)/NLog.config" />
+  </Target>
+  <Target Name="CopyNLogConfigToPublishOutput" AfterTargets="Publish">
+    <Copy SourceFiles="NLog-$(Configuration).config" DestinationFiles="$(PublishDir)/NLog.config" />
+  </Target>
+
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
