--- a/Z64Utils/NLog-Debug.config
+++ b/Z64Utils/NLog-Debug.config
@@ -31,6 +31,7 @@
     </targets>
 
     <rules>
+        <logger name="Avalonia-Layout" maxlevel="Info" final="true" /> <!-- Silence Info and below from Avalonia-Layout (very spammy) -->
         <logger name="*" minlevel="Info" writeTo="logconsole" />
         <logger name="*" minlevel="Debug" writeTo="logfile_async" />
     </rules>
