--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,17 +4,18 @@ on: [workflow_call]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
+        target-runtime: [linux-x64, win-x64]
         configuration: [Debug, Release]
 
-    name: Z64Utils-${{ matrix.configuration }}
+    name: Z64Utils-${{ matrix.target-runtime }}-${{ matrix.configuration }}
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
-      restore_args: ''
+      restore_args: --runtime ${{ matrix.target-runtime }}
       build_args: --no-self-contained --configuration ${{ matrix.configuration }} --version-suffix ${{ github.sha }} --property:IncludeSourceRevisionInInformationalVersion=false
-      archive_name: Z64Utils-${{ matrix.configuration }}-${{ github.sha }}
+      archive_name: Z64Utils-${{ matrix.target-runtime }}-${{ matrix.configuration }}-${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
         with:
