Update NLog levels

--- a/Z64Utils/NLog-Debug.config
+++ b/Z64Utils/NLog-Debug.config
@@ -31,8 +31,8 @@
     </targets>
 
     <rules>
-        <logger name="*" minlevel="Info" writeTo="logconsole" />
-        <logger name="*" minlevel="Debug" writeTo="logfile_async" />
+        <logger name="*" minlevel="Debug" writeTo="logconsole" />
+        <logger name="*" minlevel="Trace" writeTo="logfile_async" />
     </rules>
 
 </nlog>
