--- a/Z64Utils/NLog-Release.config
+++ b/Z64Utils/NLog-Release.config
@@ -32,7 +32,7 @@
 
     <rules>
         <logger name="*" minlevel="Warn" writeTo="logconsole" />
-        <logger name="*" minlevel="Info" writeTo="logfile_async" />
+        <logger name="*" minlevel="Debug" writeTo="logfile_async" />
     </rules>
 
 </nlog>
