--- a/Z64Utils/Z64Utils.csproj
+++ b/Z64Utils/Z64Utils.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Z64</RootNamespace>
+    <RootNamespace>Z64Utils</RootNamespace>
     <AssemblyName>Z64Utils</AssemblyName>
 
     <!--
