--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,3 +7,5 @@ jobs:
     uses: ./.github/workflows/format.yml
   build:
     uses: ./.github/workflows/build.yml
+    with:
+      version-suffix: ${{ github.sha }}
