--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,8 +5,25 @@ on: [push]
 jobs:
   check-format:
     uses: ./.github/workflows/format.yml
+
   build:
+    if: github.ref == 'refs/heads/master'
     uses: ./.github/workflows/build.yml
+    with:
+      version-suffix: ${{ github.sha }}
+
+  build-release:
+    if: startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/tags/nightly'
+    uses: ./.github/workflows/build.yml
+    with:
+      version-suffix: ''
+
   nightly-release:
+    if: github.ref == 'refs/heads/master'
     needs: build
     uses: ./.github/workflows/nightly-release.yml
+
+  release:
+    if: startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/tags/nightly'
+    needs: build-release
+    uses: ./.github/workflows/release.yml
