--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       version-suffix:
         required: true
         type: string
+      archive-suffix:
+        required: true
+        type: string
 
 jobs:
   build:
@@ -20,7 +23,7 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       restore_args: --runtime ${{ matrix.target-runtime }}
       build_args: --no-self-contained --configuration ${{ matrix.configuration }} --version-suffix '${{ inputs.version-suffix }}' --property:IncludeSourceRevisionInInformationalVersion=false
-      archive_name: Z64Utils-${{ matrix.target-runtime }}-${{ matrix.configuration }}-${{ github.sha }}
+      archive_name: Z64Utils-${{ matrix.target-runtime }}-${{ matrix.configuration }}-${{ inputs.archive-suffix }}
     steps:
       - uses: actions/checkout@v4
         with:
