--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,3 +9,4 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       version-suffix: ${{ github.sha }}
+      archive-suffix: ${{ github.sha }}
