--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,12 +11,14 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       version-suffix: ${{ github.sha }}
+      archive-suffix: ${{ github.sha }}
 
   build-release:
     if: startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/tags/nightly'
     uses: ./.github/workflows/build.yml
     with:
       version-suffix: ''
+      archive-suffix: ${{ github.ref_name }}
 
   nightly-release:
     if: github.ref == 'refs/heads/master'
