--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ vars.GITHUB_REF_NAME }}
-          name: Z64Utils ${{ vars.GITHUB_REF_NAME }}
+          tag_name: ${{ github.ref_name }}
+          name: Z64Utils ${{ github.ref_name }}
           files: |
             ${{ steps.release_info.outputs.files }}
